Added Personal Information

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
 <header class="hero text-center">
     <div class="container">
-        <h1 class="display-4">Hi, I'm Your Name</h1>
-        <p class="lead">IT Graduate • Game Dev • Java / Unreal Engine</p>
+        <h1 class="display-4">Hi, I'm Dustin</h1>
+        <p class="lead">B.sc Informatics • IT-Consulting • Java </p>
     </div>
 </header>
 
 <section class="container my-5">
     <h2>About Me</h2>
     <p>
-        I'm an IT graduate focused on software development and game development.
+        I'm an IT graduate focused on software development and software packaging.
         I enjoy building practical projects and learning new technologies by doing.
     </p>
 </section>
@@ -72,15 +72,15 @@
 <section id="contact" class="container my-5">
     <h2>Contact</h2>
     <ul class="list-unstyled">
-        <li>Email: <a href="mailto:you@email.com">you@email.com</a></li>
-        <li>GitHub: <a href="https://github.com/yourname" target="_blank">github.com/yourname</a></li>
-        <li>LinkedIn: <a href="#" target="_blank">LinkedIn Profile</a></li>
+        <li>Email: <a href="mailto:dustin@dustins-welt.de">dustin@dustins-welt.de</a></li>
+        <li>GitHub: <a href="https://github.com/Dus00" target="_blank">github.com/Dus00</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/dustin-görg-a778831b9/" target="_blank">LinkedIn Profile</a></li>
     </ul>
 </section>
 
 <footer class="footer text-center">
     <div class="container">
-        <small>© 2026 Your Name</small>
+        <small>© 2026 Dustin Miles Görg</small>
     </div>
 </footer>
 
