--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Your Name – Portfolio</title>
+    <title>Dustin Görg – Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap 5 -->
@@ -11,12 +11,13 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="top">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">YourName</a>
+        <a class="navbar-brand" href="#top">Dustin</a>
         <div>
+            <a class="nav-link d-inline text-light" href="#about">About</a>
             <a class="nav-link d-inline text-light" href="#projects">Projects</a>
             <a class="nav-link d-inline text-light" href="#contact">Contact</a>
         </div>
@@ -26,11 +27,11 @@
 <header class="hero text-center">
     <div class="container">
         <h1 class="display-4">Hi, I'm Dustin</h1>
-        <p class="lead">B.sc Informatics • IT-Consulting • Java </p>
+        <p class="lead">B.Sc. Informatics • IT Consulting • Java</p>
     </div>
 </header>
 
-<section class="container my-5">
+<section id="about" class="container my-5">
     <h2>About Me</h2>
     <p>
         I'm an IT graduate focused on software development and software packaging.
@@ -49,7 +50,7 @@
                     <p class="card-text">
                         A blackjack training game built with Unreal Engine.
                     </p>
-                    <a href="https://github.com/yourname/project" class="btn btn-outline-primary btn-sm" target="_blank">
+                    <a href="https://github.com/Dus00" class="btn btn-outline-primary btn-sm" target="_blank">
                         GitHub
                     </a>
                 </div>
