--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <a class="navbar-brand" href="#top">Dustin</a>
         <div>
             <a class="nav-link d-inline text-light" href="#about">About</a>
+            <a class="nav-link d-inline text-light" href="#education">Education</a>
+            <a class="nav-link d-inline text-light" href="#experience">Experience</a>
             <a class="nav-link d-inline text-light" href="#projects">Projects</a>
             <a class="nav-link d-inline text-light" href="#contact">Contact</a>
         </div>
@@ -34,8 +36,10 @@
 <section id="about" class="container my-5">
     <h2>About Me</h2>
     <p>
-        I'm an IT graduate focused on software development and software packaging.
-        I enjoy building practical projects and learning new technologies by doing.
+        I am a Junior Software Developer with a Bachelor’s degree in Computer Science.
+        My expertise lies in software engineering, with a strong focus on algorithms, object-oriented design, and the development of structured, maintainable systems.
+        In addition to development, I have experience in IT consulting and software packaging. I create software packages for distribution via SCCM and Intune using PSADT scripts, providing practical, reliable solutions for network systems in a freelance capacity.
+        This website serves as a portfolio to showcase my projects, technical skills, and practical experience in software engineering.
     </p>
 </section>
 
@@ -51,12 +55,12 @@
                         A blackjack training game built with Unreal Engine.
                     </p>
                     <a href="https://github.com/Dus00" class="btn btn-outline-primary btn-sm" target="_blank">
-                        GitHub
+                        Download 
                     </a>
                 </div>
             </div>
         </div>
-
+        
         <div class="col-md-6">
             <div class="card">
                 <div class="card-body">
