added cv download button and cv as a pdf

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a class="nav-link d-inline text-light" href="#experience">Experience</a>
             <a class="nav-link d-inline text-light" href="#projects">Projects</a>
             <a class="nav-link d-inline text-light" href="#contact">Contact</a>
+            <a href="CV_Dustin_Goerg" class="btn btn-outline-light btn-sm ms-3" download>Download CV</a>
         </div>
     </div>
 </nav>
@@ -47,22 +48,26 @@
     <h2>Projects</h2>
 
     <div class="row g-4">
+        <!-- Project 1 -->
         <div class="col-md-6">
             <div class="card">
+                <img src="images/blackjack.jpg" class="card-img-top" alt="Blackjack Trainer Screenshot">
                 <div class="card-body">
                     <h5 class="card-title">Blackjack Trainer</h5>
                     <p class="card-text">
                         A blackjack training game built with Unreal Engine.
                     </p>
                     <a href="https://github.com/Dus00" class="btn btn-outline-primary btn-sm" target="_blank">
-                        Download 
+                        GitHub
                     </a>
                 </div>
             </div>
         </div>
-        
+
+        <!-- Project 2 -->
         <div class="col-md-6">
             <div class="card">
+                <img src="images/project2.jpg" class="card-img-top" alt="Project Screenshot">
                 <div class="card-body">
                     <h5 class="card-title">Another Project</h5>
                     <p class="card-text">
