--- a/index.html
+++ b/index.html
@@ -54,15 +54,28 @@
         <!-- Project 1 -->
         <div class="col-md-6">
             <div class="card">
-                <img src="images/blackjack1.png" class="card-img-top project-thumb" alt="Blackjack Trainer" data-bs-toggle="modal" data-bs-target="#project1Modal">
+                <img src="images/blackjack1.png" class="card-img-top project-thumb" alt="Blackjack Trainer" data-bs-toggle="modal" data-bs-target="#project1Modal" title="Click to view gallery">
+
                 <div class="card-body">
+                    <div class="d-flex justify-content-center mb-2">
+                        <a href="#" class="btn btn-outline-light btn-sm" data-bs-toggle="modal" data-bs-target="#project1Modal">
+                    View Gallery
+                        </a>
+                    </div>
                     <h5 class="card-title">Blackjack Trainer</h5>
                     <p class="card-text">
-                        A blackjack training game built with Unreal Engine.
+                    Blackjack Trainer is a software tool designed to teach both <strong>basic strategy</strong> and <strong>card counting</strong> for blackjack players.
+                    <br><br>
+                        The trainer features a <strong>dynamic basic strategy chart</strong> that adapts to the current game state. The algorithm continuously evaluates the player's hand and the dealer's visible card, then recommends the optimal action—hit, stand, double down, or split. If certain actions become unavailable due to game rules or previous moves, the chart automatically updates to suggest the next best option.
+                    <br><br>
+                        This algorithmic approach helps users understand <strong>why each decision is optimal</strong> in any situation, improving both strategy and decision-making skills.
+                    <br>
+                        The project emphasizes practical learning and strategy optimization, providing a hands-on way to master blackjack fundamentals through real-time feedback.
                     </p>
-                    <a href="https://www.dropbox.com/scl/fo/r9s25hqwe9xidcl4zdwpk/AIdqoKa5hVrhTpVovGn10eA?rlkey=0s8f9dchm324rhjmfl0kh6imx&st=qo7vqciy&dl=0" class="btn btn-outline-primary btn-sm" target="_blank">
-                        Download Showcase
-                    </a>
+                    <div class="d-flex justify-content-center mb-2"></div>
+                        <a href="https://www.dropbox.com/scl/fo/r9s25hqwe9xidcl4zdwpk/AIdqoKa5hVrhTpVovGn10eA?rlkey=0s8f9dchm324rhjmfl0kh6imx&st=qo7vqciy&dl=0" class="btn btn-outline-primary btn-sm" target="_blank">
+                            Download Showcase
+                        </a>
                 </div>
             </div>
         </div>
@@ -99,11 +112,11 @@
             <div class="carousel-item">
               <img src="images/blackjack3.png" class="d-block w-100" alt="Blackjack Screenshot 3">
             </div>
-            <div class="carousel-item active">
-              <img src="images/blackjack4.png" class="d-block w-100" alt="Blackjack Screenshot 1">
+            <div class="carousel-item">
+              <img src="images/blackjack4.png" class="d-block w-100" alt="Blackjack Screenshot 3">
             </div>
             <div class="carousel-item">
-              <img src="images/blackjack5.png" class="d-block w-100" alt="Blackjack Screenshot 2">
+              <img src="images/blackjack5.png" class="d-block w-100" alt="Blackjack Screenshot 3">
             </div>
             <div class="carousel-item">
               <img src="images/blackjack6.png" class="d-block w-100" alt="Blackjack Screenshot 3">
