fixed a bug where user couldnt see galerie anymore

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <!-- Project 1 -->
         <div class="col-md-6">
             <div class="card">
-                <img src="images/blackjack1.png" class="card-img-top project-thumb" alt="Blackjack Trainer" data-bs-toggle="modal" data-bs-target="#project1Modal" title="Click to view gallery">
+                <img src="images/blackjack_thumb.png" class="card-img-top project-thumb" alt="Blackjack Trainer" data-bs-toggle="modal" data-bs-target="#project1Modal" title="Click to view gallery">
 
                 <div class="card-body">
                     <div class="d-flex justify-content-center mb-2">
@@ -164,7 +164,75 @@
     </div>
 </section>
 
-<!-- Modals ... (same as before, unchanged) -->
+<!-- Project 1 Modal -->
+<div class="modal fade" id="project1Modal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content">
+      <div class="modal-body p-0">
+        <div id="carouselProject1" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/blackjack1.png" class="d-block w-100" alt="Blackjack Screenshot 1">
+            </div>
+            <div class="carousel-item">
+              <img src="images/blackjack2.png" class="d-block w-100" alt="Blackjack Screenshot 2">
+            </div>
+            <div class="carousel-item">
+              <img src="images/blackjack3.png" class="d-block w-100" alt="Blackjack Screenshot 3">
+            </div>
+            <div class="carousel-item">
+              <img src="images/blackjack4.png" class="d-block w-100" alt="Blackjack Screenshot 4">
+            </div>
+            <div class="carousel-item">
+              <img src="images/blackjack5.png" class="d-block w-100" alt="Blackjack Screenshot 5">
+            </div>
+            <div class="carousel-item">
+              <img src="images/blackjack6.png" class="d-block w-100" alt="Blackjack Screenshot 6">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject1" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselProject1" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Project 2 Modal -->
+<div class="modal fade" id="project2Modal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content">
+      <div class="modal-body p-0">
+        <div id="carouselProject2" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/project2_1.jpg" class="d-block w-100" alt="Project2 Screenshot 1">
+            </div>
+            <div class="carousel-item">
+              <img src="images/project2_2.jpg" class="d-block w-100" alt="Project2 Screenshot 2">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselProject2" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <section id="contact" class="container my-5">
     <h2>Contact</h2>
