added personal data

--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">B.Sc. Computer Science</h5>
-                <h6 class="card-subtitle mb-2 text-muted">IU Intnationale Hochschule • 2019 - 2025</h6>
+                <h6 class="card-subtitle mb-2 text-muted">
+                    IU International University of Applied Sciences • Jul 2022 - Dec 2025</h6>
                 <p class="card-text">
-                    Relevant coursework: Software Engineering, Algorithms, Object-Oriented Programming, Data Structures, Database Systems.
+                    Bachelor Thesis: Procedural Level Generation with Wave Function Collapse
                 </p>
             </div>
         </div>
@@ -64,22 +65,8 @@
     <div class="mb-4">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">High School Diploma</h5>
-                <h6 class="card-subtitle mb-2 text-muted">School Name • 2015 - 2019</h6>
-                <p class="card-text">
-                    Focus: Mathematics and Computer Science
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="mb-4">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">High School Diploma</h5>
-                <h6 class="card-subtitle mb-2 text-muted">School Name • 2015 - 2019</h6>
-                <p class="card-text">
-                    Focus: Mathematics and Computer Science
-                </p>
+                <h5 class="card-title">University: Digital Media</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Hochschule Fulda • Apr 2020 - June 2022</h6>
             </div>
         </div>
     </div>
@@ -91,12 +78,10 @@
     <div class="mb-4">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Junior Software Developer</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Company Name • 2023 - Present</h6>
+                <h5 class="card-title">Software Packaging</h5>
+                <h6 class="card-subtitle mb-2 text-muted">networksystem • 2021 - Present</h6>
                 <p class="card-text">
-                    - Developing structured and maintainable software solutions in Java.<br>
-                    - Implementing algorithms and object-oriented design patterns.<br>
-                    - Collaborating with teams to optimize software performance.
+                    Creation of software packages for deployment via SCCM/Intune using a PSADT script.
                 </p>
             </div>
         </div>
@@ -104,12 +89,16 @@
     <div class="mb-4">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Freelance IT Consultant</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Remote • May 2021 - Present</h6>
+                <h5 class="card-title">Java Tutor</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Hochschule Fulda • Oct 2021 - Mar 2022</h6>
                 <p class="card-text">
-                    - Creating software packages for distribution via SCCM and Intune using PSADT scripts.<br>
-                    - Providing network system solutions and IT consulting for clients.<br>
-                    - Maintaining and deploying software updates efficiently.
+                    Supported students in learning Java
+                    programming concepts, object-oriented
+                    design, and debugging. Responsibilities
+                    included assisting during lab sessions,
+                    explaining core programming principles,
+                    and helping students improve their coding
+                    skills.
                 </p>
             </div>
         </div>
