--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="col-md-6">
                     <div class="card">
                         <img src="images/wfc_thumb.png" class="card-img-top project-thumb" alt="Wave Function Collapse"
-                            data-bs-toggle="modal" data-bs-target="#project2Modal">
+                            data-bs-toggle="modal" data-bs-target="#project2Modal" title="Click to view gallery">
                         <div class="card-body">
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-outline-light btn-sm" data-bs-toggle="modal"
