changed the skaling of the Porject chard. So no matter of the courent resoultion  of the png used. it will be the same design

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                 <!-- Project 1 -->
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="images/blackjack_thumb.png" class="card-img-top project-thumb" alt="Blackjack Trainer"
-                            data-bs-toggle="modal" data-bs-target="#project1Modal" title="Click to view gallery">
-
+                        <div class="project-thumb-wrapper" data-bs-toggle="modal" data-bs-target="#project1Modal">
+                            <img src="images/blackjack_thumb.png" alt="Blackjack Trainer">
+                        </div>
                         <div class="card-body">
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-outline-light btn-sm" data-bs-toggle="modal"
@@ -182,8 +182,9 @@
                 <!-- Project 2 -->
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="images/wfc_thumb.png" class="card-img-top project-thumb" alt="Wave Function Collapse"
-                            data-bs-toggle="modal" data-bs-target="#project2Modal" title="Click to view gallery">
+                        <div class="project-thumb-wrapper" data-bs-toggle="modal" data-bs-target="#project2Modal">
+                            <img src="images/wfc_thumb.png" alt="Wave Function Collapse" title="Click to view gallery">
+                        </div>
                         <div class="card-body">
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-outline-light btn-sm" data-bs-toggle="modal"
