--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
@@ -215,73 +217,86 @@
             </div>
         </section>
 
-        <section id="contact" class="container my-5">
-            <h2>Contact</h2>
-            <ul class="list-unstyled">
-                <li>Email: <a href="mailto:dustin@dustins-welt.de">dustin@dustins-welt.de</a></li>
-                <li>GitHub: <a href="https://github.com/Dus00" target="_blank">github.com/Dus00</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/dustin-görg-a778831b9/" target="_blank">LinkedIn
-                        Profile</a></li>
-            </ul>
-        </section>
+        <section id="contact" class="container my-5 text-center">
+            <h2 class="mb-4">Contact</h2>
+            <div class="d-flex flex-column flex-md-row justify-content-center gap-3">
+                <a href="mailto:dustin@dustins-welt.de" class="btn btn-outline-light d-flex align-items-center gap-2">
+                    <i class="bi bi-envelope-fill"></i> Email
+                </a>
+                <a href="https://github.com/Dus00" target="_blank"
+                    class="btn btn-outline-light d-flex align-items-center gap-2">
+                    <i class="bi bi-github"></i> GitHub
+                </a>
+                <a href="https://www.linkedin.com/in/dustin-görg-a778831b9/" target="_blank"
+                    class="btn btn-outline-light d-flex align-items-center gap-2">
+                    <i class="bi bi-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://www.xing.com/profile/Dustin_Goerg" target="_blank"
+                    class="btn btn-outline-light d-flex align-items-center gap-2">
+                    <i class="fab fa-xing"></i> Xing
+                </a>
 
-        <!-- Project 1 Modal -->
-        <div class="modal fade" id="project1Modal" tabindex="-1" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-lg">
-                <div class="modal-content">
-                    <div class="modal-body p-0">
-                        <div id="carouselProject1" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="images/blackjack1.png" class="d-block w-100" alt="Blackjack Screenshot 1">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/blackjack2.png" class="d-block w-100" alt="Blackjack Screenshot 2">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/blackjack3.png" class="d-block w-100" alt="Blackjack Screenshot 3">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/blackjack4.png" class="d-block w-100" alt="Blackjack Screenshot 4">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/blackjack5.png" class="d-block w-100" alt="Blackjack Screenshot 5">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/blackjack6.png" class="d-block w-100" alt="Blackjack Screenshot 6">
-                                </div>
+            </div>
+        </section>
+    </main>
+
+    <!-- Project 1 Modal -->
+    <div class="modal fade" id="project1Modal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-body p-0">
+                    <div id="carouselProject1" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="images/blackjack1.png" class="d-block w-100" alt="Blackjack Screenshot 1">
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject1"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon"></span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselProject1"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon"></span>
-                            </button>
+                            <div class="carousel-item">
+                                <img src="images/blackjack2.png" class="d-block w-100" alt="Blackjack Screenshot 2">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/blackjack3.png" class="d-block w-100" alt="Blackjack Screenshot 3">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/blackjack4.png" class="d-block w-100" alt="Blackjack Screenshot 4">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/blackjack5.png" class="d-block w-100" alt="Blackjack Screenshot 5">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/blackjack6.png" class="d-block w-100" alt="Blackjack Screenshot 6">
+                            </div>
                         </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject1"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselProject1"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
-                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- Project 2 Modal -->
-        <div class="modal fade" id="project2Modal" tabindex="-1" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-lg">
-                <div class="modal-content">
-                    <div class="modal-body p-0">
-                        <div id="carouselProject2" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="images/wfc1.png" class="d-block w-100" alt="WFC Screenshot 1">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="images/wfc2.png" class="d-block w-100" alt="WFC Screenshot 2">
-                                </div>
-                                <!-- 
+    <!-- Project 2 Modal -->
+    <div class="modal fade" id="project2Modal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-body p-0">
+                    <div id="carouselProject2" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="images/wfc1.png" class="d-block w-100" alt="WFC Screenshot 1">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/wfc2.png" class="d-block w-100" alt="WFC Screenshot 2">
+                            </div>
+                            <!-- 
             <div class="carousel-item">
               <img src="images/wfc3.png" class="d-block w-100" alt="WFC Screenshot 3">
             </div>
@@ -296,30 +311,28 @@
             </div>
           </div>
           -->
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2"
-                                    data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon"></span>
-                                </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselProject2"
-                                    data-bs-slide="next">
-                                    <span class="carousel-control-next-icon"></span>
-                                </button>
-                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselProject2"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </button>
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary btn-sm"
-                                data-bs-dismiss="modal">Close</button>
-                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
-
-            <footer class="footer text-center">
-                <div class="container">
-                    <small>© 2026 Dustin Miles Görg</small>
-                </div>
-            </footer>
-
+        </div>
+    </div>
+    <footer class="footer text-center">
+        <div class="container">
+            <small>© 2026 Dustin Miles Görg</small>
+        </div>
+    </footer>
 </body>
 
 </html>
