--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <header class="hero text-center">
             <div class="container">
                 <h1 class="display-4">Hi, I'm Dustin</h1>
-                <p class="lead">B.Sc. Computer Science • IT Consulting • Java</p>
+                <p class="lead">B.Sc. Computer Science • IT Consulting • Java development</p>
             </div>
         </header>
 
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- Education Section -->
         <section id="education" class="container my-5">
             <h2>Education</h2>
