--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                 abstract procedural algorithm can be transformed into a concrete game system that
                                 directly influences player experience and level design.
                             </p>
-                            <a href="https://www.dropbox.com/scl/fo/r9s25hqwe9xidcl4zdwpk/AIdqoKa5hVrhTpVovGn10eA?rlkey=0s8f9dchm324rhjmfl0kh6imx&st=qo7vqciy&dl=0"
+                            <a href="https://www.dropbox.com/scl/fo/8uamsoimwq100xadc5zsh/AFr7y4hWfEe4PnunSHQbRL0?rlkey=x2a0k79cjycp8czrjc9j6jkjd&st=yh5v8v9l&dl=0"
                                 class="btn btn-outline-primary btn-sm ms-2" target="_blank">
                                 Download Showcase
                             </a>
@@ -339,37 +339,33 @@
                             <div class="carousel-item">
                                 <img src="images/wfc2.png" class="d-block w-100" alt="WFC Screenshot 2">
                             </div>
-                            <!-- 
-            <div class="carousel-item">
-              <img src="images/wfc3.png" class="d-block w-100" alt="WFC Screenshot 3">
-            </div>
-            <div class="carousel-item">
-              <img src="images/wfc4.png" class="d-block w-100" alt="WFC Screenshot 4">
-            </div>
-            <div class="carousel-item">
-              <img src="images/wfc5.png" class="d-block w-100" alt="WFC Screenshot 5">
-            </div>
-            <div class="carousel-item">
-              <img src="images/wfc6.png" class="d-block w-100" alt="WFC Screenshot 6">
-            </div>
-          </div>
-          -->
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon"></span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#carouselProject2"
-                                data-bs-slide="next">
-                                <span class="carousel-control-next-icon"></span>
-                            </button>
+                            <div class="carousel-item">
+                                <img src="images/wfc3.png" class="d-block w-100" alt="WFC Screenshot 3">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/wfc4.png" class="d-block w-100" alt="WFC Screenshot 4">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/wfc5.png" class="d-block w-100" alt="WFC Screenshot 5">
+                            </div>
                         </div>
+
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject2"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselProject2"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
-                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <!-- Project 3 Modal -->
@@ -380,22 +376,24 @@
                     <div id="carouselProject3" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="images/WeepingAngel1.png" class="d-block w-100" alt="Weeping Angel Screenshot 1">
+                                <img src="images/WeepingAngel1.png" class="d-block w-100"
+                                    alt="Weeping Angel Screenshot 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="images/WeepingAngel2.png" class="d-block w-100" alt="Weeping Angel Screenshot 2">
+                                <img src="images/WeepingAngel2.png" class="d-block w-100"
+                                    alt="Weeping Angel Screenshot 2">
                             </div>
                             <div class="carousel-item">
-                                <img src="images/WeepingAngel3.png" class="d-block w-100" alt="Weeping Angel Screenshot 3">
+                                <img src="images/WeepingAngel3.png" class="d-block w-100"
+                                    alt="Weeping Angel Screenshot 3">
                             </div>
                             <div class="carousel-item">
-                                <img src="images/WeepingAngel4.png" class="d-block w-100" alt="Weeping Angel Screenshot 4">
+                                <img src="images/WeepingAngel4.png" class="d-block w-100"
+                                    alt="Weeping Angel Screenshot 4">
                             </div>
                             <div class="carousel-item">
-                                <img src="images/WeepingAngel5.png" class="d-block w-100" alt="Weeping Angel Screenshot 5">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="images/blackjack6.png" class="d-block w-100" alt="Blackjack Screenshot 6">
+                                <img src="images/WeepingAngel5.png" class="d-block w-100"
+                                    alt="Weeping Angel Screenshot 5">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject3"
